# Game_Mix

./: .clang-format  .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Game1.cpp  Game2.cpp  Global_Classes.cpp  Global_Classes.h  Global_Definitions.h  Global_Variables.h  Makefile  README.md  TP_2023_Project  build.sh  build_linux_version.sh  cmake_install.cmake  game2.cpp  main.cpp
.github/workflows/: check.yml
MyClasses/: Button_class.cpp  Essence_class.cpp  ExitMenu_class.cpp  Fon_class.cpp  MainMenu_class.cpp  Object_class.cpp  PlayMenu_class.cpp  Window_class.cpp
Resources/icons/: i.rc
SFML-2.5.1/doc/html/: Drawable_8hpp_source.html  Event_8hpp_source.html  RenderTarget_8hpp_source.html  Shape_8hpp_source.html  Sprite_8hpp_source.html  Text_8hpp_source.html  VertexArray_8hpp_source.html  VertexBuffer_8hpp_source.html  classsf_1_1CircleShape.html  classsf_1_1ConvexShape.html  classsf_1_1Drawable-members.html  classsf_1_1Drawable.html  classsf_1_1Event.html  classsf_1_1Joystick.html  classsf_1_1Keyboard.html  classsf_1_1Mouse.html  classsf_1_1RectangleShape.html  classsf_1_1RenderStates.html  classsf_1_1RenderTarget-members.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture-members.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow-members.html  classsf_1_1RenderWindow.html  classsf_1_1Shader.html  classsf_1_1Sprite.html  classsf_1_1Text.html  classsf_1_1Texture.html  classsf_1_1Transformable.html  classsf_1_1Vertex.html  classsf_1_1VertexArray.html  classsf_1_1VertexBuffer.html  classsf_1_1View.html  classsf_1_1Window.html  functions_d.html  functions_func_d.html  index.html  structsf_1_1BlendMode.html  structsf_1_1Event_1_1JoystickButtonEvent.html  structsf_1_1Event_1_1KeyEvent.html  (+1 more)
SFML-2.5.1/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  ConvexShape.hpp  Drawable.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
SFML-2.5.1/include/SFML/Window/: Event.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
SFML-2.5.1_for_linux/share/SFML/doc/html/: Drawable_8hpp_source.html  Event_8hpp_source.html  RenderTarget_8hpp_source.html  Shape_8hpp_source.html  Sprite_8hpp_source.html  Text_8hpp_source.html  VertexArray_8hpp_source.html  VertexBuffer_8hpp_source.html  classsf_1_1CircleShape.html  classsf_1_1ConvexShape.html  classsf_1_1Drawable-members.html  classsf_1_1Drawable.html  classsf_1_1Event.html  classsf_1_1Joystick.html  classsf_1_1Keyboard.html  classsf_1_1Mouse.html  classsf_1_1RectangleShape.html  classsf_1_1RenderStates.html  classsf_1_1RenderTarget-members.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture-members.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow-members.html  classsf_1_1RenderWindow.html  classsf_1_1Shader.html  classsf_1_1Sprite.html  classsf_1_1Text.html  classsf_1_1Texture.html  classsf_1_1Transformable.html  classsf_1_1Vertex.html  classsf_1_1VertexArray.html  classsf_1_1VertexBuffer.html  classsf_1_1View.html  classsf_1_1Window.html  functions_d.html  functions_func_d.html  index.html  structsf_1_1BlendMode.html  structsf_1_1Event_1_1JoystickButtonEvent.html  structsf_1_1Event_1_1KeyEvent.html  (+1 more)
classes/: Games.h  MainComp.h  Menus.h
classes/games/: Game1.cpp  Game1.h  Game2.cpp  Game2.h
classes/main/: Button_class.cpp  Button_class.h  Essence_class.cpp  Essence_class.h  Fon_class.cpp  Fon_class.h  Object_class.cpp  Object_class.h  Window_class.cpp  Window_class.h  fwd.h
classes/menus/: ExitMenu_class.cpp  ExitMenu_class.h  MainMenu_class.cpp  MainMenu_class.h  PlayMenu_class.cpp  PlayMenu_class.h
exe/: TP_2023_Project
linux_build/: CMakeCache.txt  Makefile  TP_2023_Project  cmake_install.cmake
tests/: CMakeLists.txt  Game1Test.h  Game2Test.h  InterfaceTests.cpp  InterfaceTests.h  Makefile  cmake_install.cmake  main.cpp  testing.cpp  testing_game1.cpp
